<resources>
    <string name="app_name">InternApp</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="details">Details</string>
    <string name="name">Marvel Comics</string>

    <string name="search_hint">Search for a comic book</string>
    <string name="search_start">Start typing to find a particular comics.</string>
    <string name="search_view_info">Start typing to find particular comics.</string>
    <string name="search_error">There is not comic book “%s” in our library. Check the spelling and try again.</string>

    <string name="written_by">written by</string>
    <string name="find_out_more">Find out more</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="textLoginTitle">Zaloguj się</string>
    <string name="textHintLogin">Type Email</string>
    <string name="textHintPassword">Type Password</string>
    <string name="textLogIn">Zaloguj się</string>
    <string name="textRegistration">Zarejestruj się</string>
    <string name="textHintPasswordRepeat">Repeat Password</string>
    <string name="textSignUp">Zarejestruj się</string>
    <string name="textRegistrationTitle">Załóż konto</string>
    <string name="passwordDifference">Wprowadzone hasła nie są zgodne!</string>
    <string name="typeEmail">Podaj adres email</string>
    <string name="typePassword">Podaj hasło</string>
    <string name="signUpError">Rejestracja zakończona niepowodzeniem!</string>
    <string name="primitivePassword">121212</string>
    <string name="primitiveEmail">12@wp.pl</string>
    <string name="signInError">Logowanie nie powiodło się</string>
    <string name="logout">Wyloguj się</string>
    <string name="profile">Profil</string>
    <string name="welcome">Witaj "%s" :)</string>
    <string name="pressAgain">Wciśnij ponownie aby wyjść.</string>
    <string name="noEmail">Podaj adres email.</string>
    <string name="noPassword">Podaj hasło.</string>
    <string name="requiredPasswordSize">Hasło wymaga minimum 6 znaków.</string>

</resources>